# ladybug

./: AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build-and-deploy-extension.yml  build-and-deploy.yml  build-extensions.yml  ci-workflow.yml  gen-docs.yml  java-workflow.yml  linux-java-workflow.yml  linux-wheel-workflow.yml  lsqb-benchmark-workflow.yml  multiplatform-build-test.yml  nodejs-workflow.yml  precompiled-bin-workflow.yml  python-wheel-workflow.yml  wasm-workflow.yml
benchmark/: serializer.py
scripts/: generate_binary_demo.sh  setup-extension-repo.py  update-nightly-build-version.py
scripts/antlr4/: Cypher.g4  hash.md5
scripts/pip-package/: setup.py
src/antlr4/: Cypher.g4
src/binder/bind/: bind_ddl.cpp  bind_file_scan.cpp  bind_graph_pattern.cpp  bind_updating_clause.cpp
src/catalog/: catalog.cpp
src/catalog/catalog_entry/: CMakeLists.txt  catalog_entry.cpp  catalog_entry_type.cpp  graph_catalog_entry.cpp  node_table_catalog_entry.cpp  rel_group_catalog_entry.cpp
src/common/enums/: drop_type.cpp
src/common/file_system/: local_file_system.cpp
src/common/types/: json_type.cpp
src/function/: function_collection.cpp
src/function/gds/: gds.cpp
src/function/table/: CMakeLists.txt  (+3 more)
src/main/: database.cpp  database_manager.cpp  plan_printer.cpp  storage_driver.cpp
src/optimizer/: foreign_join_push_down_optimizer.cpp  limit_push_down_optimizer.cpp  optimizer.cpp  order_by_push_down_optimizer.cpp  projection_push_down_optimizer.cpp
src/parser/: transformer.cpp
src/storage/: checkpointer.cpp  shadow_file.cpp  storage_manager.cpp
src/transaction/: transaction.cpp
test/common/: vfs_test.cpp
test/copy/: copy_test.cpp
tools/: CMakeLists.txt
tools/java_api/: CMakeLists.txt
tools/java_api/src/test/java/com/lbugdb/: TestHelper.java
tools/nodejs_api/: CMakeLists.txt  lbugjs.symbols  package.json
tools/nodejs_api/test/: common.js
tools/python_api/: pyproject.toml
tools/python_api/test/: conftest.py
tools/rust_api/: Cargo.toml
tools/rust_api/include/: lbug_rs.h
tools/rust_api/include/common/enums/: statement_type.h
tools/rust_api/src/: connection.rs  ffi.rs  lib.rs
tools/shell/: embedded_shell.cpp  linenoise.cpp
tools/shell/test/: test_dynamic_extension_loading.py  test_shell_basics.py
tools/wal_dump/: CMakeLists.txt  main.cpp
tools/wasm/: README.md  package.json
tools/wasm/test/: common.js
(+77 files in other folders)
