if(${BUILD_SHELL})
    add_subdirectory(shell)
endif()
if(${BUILD_JAVA})
    add_subdirectory(java_api)
endif()
if(${BUILD_NODEJS})
    add_subdirectory(nodejs_api)
endif()
if(${BUILD_PYTHON})
    add_subdirectory(python_api)
endif()
if(${BUILD_BENCHMARK})
    add_subdirectory(benchmark)
endif()
if(${BUILD_WAL_DUMP})
    add_subdirectory(wal_dump)
endif()
if(${BUILD_WASM})
    add_subdirectory(wasm)
endif()